WIP: alterações locais OffersMapperBP82.java